--- a/public/css/main.css
+++ b/public/css/main.css
@@ -18,7 +18,6 @@ div, ul, li, ol, dl, dd, dt {margin: 0; padding: 0; box-sizing: border-box; list
 .img {width:100%;}
 
 header{width: 100%;}
-header .w{}
 header .w .pa{padding: 6% 0;}
 
 .header1 {width: 30%;}
@@ -34,14 +33,13 @@ header .w .pa{padding: 6% 0;}
 
 section{width: 100%;}
 .nav{width: 100%;height:3rem; border-top:1px solid #4d4d4f;border-bottom: 1px solid #4d4d4f; }
-.nav ul{margin-top: 0.5%; }
-.nav ul li{padding:0 1.5%;float: left;font-size: 1rem;font-weight: 400;}
-.nav ul li:hover{color: #0079c1;}
-.nav ul li a{}
+.nav .navi{margin-top: 0.5%; }
+.nav .navi li{padding:0 1.5%;float: left;font-size: 1rem;font-weight: 400;}
+.nav .navi li:hover{color: #0079c1;}
 
-.main {width:100%;  max-width:1600px; margin:5% auto; overflow:scroll;}
-.slides {height: 64vh; border:1px solid #f00; width:100%;}
-.slide {width: 100%; height:100%; margin: 0; padding: 0; border:1px solid #0f0; top:0; left:0;}
+.main {width:100%;  max-width:1280px; margin:5% auto; overflow:hidden;}
+.slides {height: 64vh;width:100%;}
+.slide {width: 100%; height:100%; margin: 0; padding: 0; top:0; left:0;}
 
 .bol{font-weight: bold;}
 .main_txt{top: 50%;transform: translateY(-50%);left: 10%;}
@@ -49,20 +47,20 @@ section{width: 100%;}
 .main_txt h2{font-size: 6vh;margin: -4% 0;font-weight:50; }
 .num{font-size: 5vh; }
 .main_txt h4{font-size: 2.5vh;font-weight:500 ;margin-bottom: 0;color: #ffcccc;}
-.main_txt button{width: 6vw;height: 5vh;background-color: #ffe6e6; color: #8b244d; border: 0;font-size: 2vh;margin: 3vh 0 0 1vh;cursor: pointer;}
+.main_txt button{width: 5vw;height: 5vh;background-color: #ffe6e6; color: #8b244d; border: 0;font-size: 2vh;margin: 3vh 0 0 1vh;cursor: pointer;}
 
 .main_txt2{top: 50%;transform: translateY(-50%);left: 10%;}
 .main_txt h2,.main_txt h4,.main_txt span,.main_txt2 h2,.main_txt2 h4,.main_txt2 span{color: #fff;}
 .main_txt2 h2{font-size: 6vh;margin: -4% 0;font-weight:50; }
 
 .main_txt2 h4{font-size: 2.5vh;font-weight:500 ;margin-bottom: 0;color: #fdfbde;}
-.main_txt2 button{width: 6vw;height: 5vh;background-color: #deebfd; color: #0e0e11; border: 0;font-size: 2vh;margin: 3vh 0 0 1vh;cursor: pointer;}
+.main_txt2 button{width: 5vw;height: 5vh;background-color: #deebfd; color: #0e0e11; border: 0;font-size: 2vh;margin: 3vh 0 0 1vh;cursor: pointer;}
 
 
 .main img{cursor: pointer;}
 .main1 h4{font-size: 0.8rem;text-align: center;margin: 1% 0;color: #383085;}
 .main1 p{font-size: 1.5vh;text-align: center;margin-bottom:1.5%;margin-top: 0;}
-.main1 img{width: 95%;}
+.main1 img{width: 100%;}
 
 .main2 h4{font-size: 0.8rem;text-align: center;margin: 3% 0;}
 .main2 img{width: 100%;}
@@ -74,16 +72,6 @@ section{width: 100%;}
 .main2 p{font-size: 1.5vh;text-align: center;margin-bottom:5%;margin-top: 0;}
 .main1{width: 62.5%;}
 .main2{width: 36.5%;}
-.main_bot img{}
-
-
-
-.btn{height:0.5rem;}
-.btn div{display: inline-block; width: 33%;height: 100%;background-color: #ccc;border-radius:5rem; }
-.btn div:hover{color: #333; }
-.btn .bt1{}
-.btn .bt2{}
-.btn .bt3{}
 
 .pro{height: 35vh;}
 .pro .pro_n{margin-top: 2vh;}
