--- a/public/css/main.css
+++ b/public/css/main.css
@@ -35,7 +35,7 @@ header .w .pa{padding: 6% 0;}
 
 section{width: 100%;}
 .nav{width: 100%;height:3vh; border-top:1px solid #4d4d4f;border-bottom: 1px solid #4d4d4f; }
-.nav .navi{margin-top: 0.3vw; }
+.nav .navi{margin-top: 0.3vw;height: 3vh; }
 .nav .navi li{padding:0 1%;float: left;font-size: 1vw;font-weight: 400;}
 .nav .navi li:hover{color: #0079c1;}
 
@@ -66,16 +66,15 @@ section{width: 100%;}
 
 .main2 img{width: 100%;}
 .main2 h4{font-size: 0.8vw;text-align: center;margin: 3% 0;}
-.main2 p{}
+.main2 p{font-size: 1vh;text-align: center;margin-bottom:5%;margin-top: 0;}
 
 .ma1,.ma2,.ma3,.ma4{width: 49.5%;}
 .ma1 h4{color:#005e97; }
 .ma2 h4{color:#ad6d29; }
 .ma3 h4{color:#226168; }
 .ma4 h4{color:#e87d24; }
-.main2 p{font-size: 1.5vh;text-align: center;margin-bottom:5%;margin-top: 0;}
-.main1{width: 65.5%;}
-.main2{width: 33.5%;}
+.main1{width: 64%;}
+.main2{width: 35%;}
 
 .pro{height: 35vh;}
 .pro .pro_n{margin-top: 2vh;}
@@ -117,7 +116,8 @@ footer .w p{font-size: 1.5vh;}
 @media screen and (max-width:1280px){
     .find button{padding: 0;font-size: 1vh;}
     .nav{height: 3.5vh;}
-    .main{width: 80%; margin: 0 auto;}
+    .main{width: 80%;}
+    .main2 p{font-size: 1.3vh;}
 }
 @media screen and (max-width:980px){}
 @media screen and (max-width:768px){}
