--- a/public/css/main.css
+++ b/public/css/main.css
@@ -39,8 +39,8 @@ section{width: 100%;}
 .nav .navi li{padding:0 1%;float: left;font-size: 1vw;font-weight: 400;}
 .nav .navi li:hover{color: #0079c1;}
 
-.main {width:auto;  max-width:1280px; margin:5% auto 3% auto; overflow:hidden;}
-.slides {height: 64vh;width:100%;}
+.main {width:auto;  max-width:1280px; margin:2% auto 2% auto; overflow:hidden;}
+.slides {height: 45vh;width:100%;}
 .slide {width: 100%; height:100%; margin: 0; padding: 0; top:0; left:0;}
 
 .bol{font-weight: bold;}
@@ -61,7 +61,7 @@ section{width: 100%;}
 
 .main img{cursor: pointer;}
 .main1 h4{font-size: 0.8rem;text-align: center;margin: 1% 0;color: #383085;}
-.main1 p{font-size: 1.5vh;text-align: center;margin-bottom:1.5%;margin-top: 0;}
+.main1 p{font-size: 1vh;text-align: center;margin-bottom:1.5%;margin-top: 0;}
 .main1 img{width: 100%;}
 
 .main2 img{width: 100%;}
@@ -75,6 +75,9 @@ section{width: 100%;}
 .ma4 h4{color:#e87d24; }
 .main1{width: 64%;}
 .main2{width: 35%;}
+
+.pic_3{max-width: 1280px; width: 80%;margin: auto;}
+
 
 .pro{height: 35vh;}
 .pro .pro_n{margin-top: 2vh;}
@@ -118,7 +121,15 @@ footer .w p{font-size: 1.5vh;}
     .nav{height: 3.5vh;}
     .main{width: 80%;}
     .main2 p{font-size: 1.3vh;}
+    .slides {height: 58vh;}
+    .pic_3{max-width: 1280px; width: 80%;margin: auto;}
+    .pro_n1{width: 30%;}
+    .pro{height: 37vh;}
+    .find button{height: 2.45vh;}
 }
-@media screen and (max-width:980px){}
+@media screen and (max-width:980px){
+    .header3 ul{margin: 0;}
+    .header3 ul li{font-size: 1.2vw;}
+}
 @media screen and (max-width:768px){}
 @media screen and (max-width:480px){}
