--- a/public/css/main.css
+++ b/public/css/main.css
@@ -6,8 +6,8 @@ a{text-decoration: none;}
 div, ul, li, ol, dl, dd, dt {margin: 0; padding: 0; box-sizing: border-box; list-style: none;}
 
 .main_1{}
-.main_2{display: none;}
-.main_3{display: none;}
+.main_2{}
+.main_3{}
 
 
 .w{width: 66.6666%;margin: 0 auto;}
@@ -60,7 +60,7 @@ section{width: 100%;}
 
 
 .main img{cursor: pointer;}
-.main1 h4{font-size: 0.8rem;text-align: center;margin: 1% 0;color: #383085;}
+.main1 h4{font-size: 1.2vh;text-align: center;margin: 1% 0;color: #383085;}
 .main1 p{font-size: 1vh;text-align: center;margin-bottom:1.5%;margin-top: 0;}
 .main1 img{width: 100%;}
 
