--- a/public/css/main.css
+++ b/public/css/main.css
@@ -116,7 +116,7 @@ footer .w .f_logo img{width:100%;}
 footer .w p{font-size: 1.5vh;}
 
 
-@media screen and (max-width:1280px){
+/* @media screen and (max-width:1280px){
     .find button{padding: 0;font-size: 1vh;}
     .nav{height: 3.5vh;}
     .main{width: 80%;}
@@ -132,4 +132,4 @@ footer .w p{font-size: 1.5vh;}
     .header3 ul li{font-size: 1.2vw;}
 }
 @media screen and (max-width:768px){}
-@media screen and (max-width:480px){}
+@media screen and (max-width:480px){} */
